--- a/index.html
+++ b/index.html
@@ -395,6 +395,30 @@
             <use href="./images/symbol-defs-close.svg#icon-close"></use>
           </svg>
         </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form action="modal-form">
+          <input
+            type="text"
+            class="modal-input"
+            placeholder="Name"
+            name="user-name"
+            required
+          />
+          <input
+            type="tel"
+            class="modal-input"
+            placeholder="Phone"
+            name="user-phone"
+            required
+          />
+          <input
+            type="email"
+            class="modal-input"
+            placeholder="Email"
+            name="user-email"
+          />
+          <button type="submit">Send</button>
+        </form>
       </div>
       <script src="./js/modal.js"></script>
     </div>
