--- a/index.html
+++ b/index.html
@@ -392,31 +392,67 @@
       <div class="modal">
         <button type="button" data-modal-close class="modal-close">
           <svg width="8" height="8" class="">
-            <use href="./images/symbol-defs-close.svg#icon-close"></use>
+            <use href="./images/icons.svg#icon-close-18"></use>
           </svg>
         </button>
         <p class="modal-title">Leave your contacts and we will call you back</p>
         <form action="modal-form">
-          <input
-            type="text"
-            class="modal-input"
-            placeholder="Name"
-            name="user-name"
-            required
-          />
-          <input
-            type="tel"
-            class="modal-input"
-            placeholder="Phone"
-            name="user-phone"
-            required
-          />
-          <input
-            type="email"
-            class="modal-input"
-            placeholder="Email"
-            name="user-email"
-          />
+          <div class="modal-field">
+            <label for="user-name" class="modal-label-text">Name</label>
+            <div class="input-wrap">
+              <input
+                type="text"
+                class="modal-input"
+                placeholder=""
+                name="user-name"
+                required
+                id="user-name"
+              />
+              <svg width="18" height="24" class="modal-input-icon">
+                <use href="./images/icons.svg#icon-person-18"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-phone" class="modal-label-text">Phone</label>
+            <div class="input-wrap">
+              <input
+                type="tel"
+                class="modal-input"
+                placeholder=""
+                name="user-phone"
+                required
+                id="user-phone"
+              />
+              <svg width="18" height="24" class="modal-input-icon">
+                <use href="./images/icons.svg#icon-phone-18"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-label-text">Email</label>
+            <div class="input-wrap">
+              <input
+                type="email"
+                class="modal-input"
+                placeholder=""
+                name="user-email"
+                id="user-email"
+              />
+              <svg width="18" height="24" class="modal-input-icon">
+                <use href="./images/icons.svg#icon-email-18"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-comment" class="modal-label-text">Comment</label>
+            <textarea
+              name="user-comment"
+              id="user-comment"
+              class="modal-textarea"
+              placeholder="Text input"
+            ></textarea>
+          </div>
           <button type="submit">Send</button>
         </form>
       </div>
