--- a/index.html
+++ b/index.html
@@ -453,6 +453,19 @@
               placeholder="Text input"
             ></textarea>
           </div>
+          <div class="modal-field">
+            <input
+              type="checkbox"
+              id="privacy"
+              name="user-privacy"
+              value="true"
+              class="modal-check visually-hidden"
+            />
+            <label for="privacy" class="check-text"
+              >I accept the terms and conditions of the
+              <a href="" class="check-text-privacy">Privacy Policy</a></label
+            >
+          </div>
           <button type="submit">Send</button>
         </form>
       </div>
