--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-close">
-          <svg width="8" height="8" class="">
+          <svg width="8" height="8" class="close">
             <use href="./images/icons.svg#icon-close-18"></use>
           </svg>
         </button>
@@ -466,7 +466,7 @@
               <a href="" class="check-text-privacy">Privacy Policy</a></label
             >
           </div>
-          <button type="submit">Send</button>
+          <button type="submit" class="hero-btn modal-btn">Send</button>
         </form>
       </div>
       <script src="./js/modal.js"></script>
