--- a/index.html
+++ b/index.html
@@ -386,12 +386,32 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="online-form">
+              <div class="online-field">
+                <input
+                  class="online-input online-item"
+                  id="online-email"
+                  name="online-email"
+                  type="email"
+                  required
+                  placeholder=" "
+                />
+                <label class="online-label" for="online-email">E-mail</label>
+              </div>
+               <button type="submit" class="hero-btn online-btn">Subscribe</button>
+               <svg width="24" height="24" class="footer-icon-plane">
+                  <use href="./images/icons.svg#icon-plane"></use></svg
+              >
+          </form>
       </div>
     </footer>
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-close">
-          <svg width="8" height="8" class="close">
+          <svg width="8" height="8" class="close-icon">
             <use href="./images/icons.svg#icon-close-18"></use>
           </svg>
         </button>
