--- a/portfolio.html
+++ b/portfolio.html
@@ -309,6 +309,26 @@
             </li>
           </ul>
         </div>
+
+        <div class="footer-subscribe">
+          <p class="footer-subscribe-text">Subscribe</p>
+          <form class="online-form">
+              <div class="online-field">
+                <input
+                  class="online-input online-item"
+                  id="online-email"
+                  name="online-email"
+                  type="email"
+                  required
+                  placeholder=" "
+                />
+                <label class="online-label" for="online-email">E-mail</label>
+              </div>
+               <button type="submit" class="hero-btn online-btn">Subscribe</button>
+               <svg width="24" height="24" class="footer-icon-plane">
+                  <use href="./images/icons.svg#icon-plane"></use></svg
+              >
+          </form>
       </div>
     </footer>
   </body>
