--- a/index.html
+++ b/index.html
@@ -397,9 +397,8 @@
                   name="online-email"
                   type="email"
                   required
-                  placeholder=" "
+                  placeholder="E-mail"
                 />
-                <label class="online-label" for="online-email">E-mail</label>
               </div>
                 <button type="submit" class="hero-btn online-btn">Subscribe</button>
                 <svg width="24" height="24" class="footer-icon-plane">
@@ -408,6 +407,7 @@
           </form>
       </div>
     </footer>
+    
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-close">
