--- a/portfolio.html
+++ b/portfolio.html
@@ -320,12 +320,11 @@
                   name="online-email"
                   type="email"
                   required
-                  placeholder=" "
+                  placeholder="E-mail"
                 />
-                <label class="online-label" for="online-email">E-mail</label>
-              </div>
-               <button type="submit" class="hero-btn online-btn">Subscribe</button>
-               <svg width="24" height="24" class="footer-icon-plane">
+                </div>
+                <button type="submit" class="hero-btn online-btn">Subscribe</button>
+                <svg width="24" height="24" class="footer-icon-plane">
                   <use href="./images/icons.svg#icon-plane"></use></svg
               >
           </form>
