--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
 
   <body>
-    <header class="header">
+    <!-- <header class="header">
       <div class="container header-container">
         <nav class="header-nav">
           <a class="header-logo link" href="./index.html"
@@ -55,22 +55,22 @@
           </ul>
         </address>
       </div>
-    </header>
+    </header> -->
 
     <main>
-      <section class="hero">
+      <!-- <section class="hero">
         <div class="container hero-container">
           <h1 class="hero-title">Effective Solutions for Your Business</h1>
           <button class="hero-btn" data-modal-open type="button">
             Order Service
           </button>
         </div>
-      </section>
+      </section> -->
 
       <section class="studio">
         <div class="container">
           <div class="studio-icon">
-            <ul class="studio-icon-list">
+            <!-- <ul class="studio-icon-list">
               <li class="studio-icon-item">
                 <a href="" class="studio-icon-link link">
                   <svg width="64" height="64" class="studio-icon-svg">
@@ -95,7 +95,7 @@
                     <use href="./images/icons.svg#icon-astronaut"></use></svg
                 ></a>
               </li>
-            </ul>
+            </ul> -->
           </div>
           <h2 class="studio-title">Advantages</h2>
           <ul class="studio-list list">
@@ -131,7 +131,7 @@
         </div>
       </section>
 
-      <section class="work">
+      <!-- <section class="work">
         <div class="container work-container">
           <h2 class="section-title">What are we doing</h2>
           <ul class="work-list list">
@@ -142,7 +142,7 @@
             <li><img src="./images/img3.jpg" alt="laptop" width="360" /></li>
           </ul>
         </div>
-      </section>
+      </section> -->
 
       <section class="team">
         <div class="container">
@@ -301,7 +301,7 @@
       </section>
     </main>
 
-    <section class="customers">
+    <!-- <section class="customers">
       <div class="container customers-container">
         <h2 class="section-title">Customers</h2>
         <ul class="customers-list list">
@@ -343,9 +343,9 @@
           </li>
         </ul>
       </div>
-    </section>
+    </section> -->
 
-    <footer class="footer">
+    <!-- <footer class="footer">
       <div class="container footer-container">
         <div class="container-logo">
           <a class="footer-logo link" href="./index.html"
@@ -406,8 +406,8 @@
               >
           </form>
       </div>
-    </footer>
-    
+    </footer> -->
+
     <div class="backdrop is-hidden" data-modal>
       <div class="modal">
         <button type="button" data-modal-close class="modal-close">
